dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationServiceComponent__c.object
<CustomObject>
    <description>Queue for Service Component Integration</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingEndDate__c</fullName>
        <label>Billing End Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStartDate__c</fullName>
        <label>Billing Start Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStatus__c</fullName>
        <label>Billing Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BundleId__c</fullName>
        <label>Bundle Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BundleReference__c</fullName>
        <label>Bundle Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <label>Cancel Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentId__c</fullName>
        <label>Component Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>Created By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedWhen__c</fullName>
        <label>Created When</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalRecordId__c</fullName>
        <label>Local Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalReference__c</fullName>
        <label>Local Reference</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocalServiceName__c</fullName>
        <label>Local Service Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageResult__c</fullName>
        <label>Message Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifiedBy__c</fullName>
        <label>Modified By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifiedWhen__c</fullName>
        <label>Modified When</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAType__c</fullName>
        <label>SLA Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Service Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Component__c</fullName>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Service Component Integration</relationshipLabel>
        <relationshipName>Service_Component_Integration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpecialConditions__c</fullName>
        <label>Special Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Component Integration</label>
    <nameField>
        <displayFormat>SC{0000000000}</displayFormat>
        <label>MessageID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Component Integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>